Bug 440244 - System Settings does not show video preview for desktop effects
Summary: System Settings does not show video preview for desktop effects
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwineffects (other bugs)
Version First Reported In: 6.3.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 470826 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-07-25 03:16 UTC by kingofgamesyami
Modified: 2025-04-25 21:04 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
Screenshot of System Settings (not) displaying a video (173.68 KB, image/png)
2021-07-25 03:16 UTC, kingofgamesyami
Details
stdout of systemsettings5 while reproducing bug (6.08 KB, text/plain)
2021-07-25 03:22 UTC, kingofgamesyami
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kingofgamesyami 2021-07-25 03:16:53 UTC
Created attachment 140311 [details]
Screenshot of System Settings (not) displaying a video

SUMMARY

Desktop Effects preview videos do not render.

STEPS TO REPRODUCE
1. Open Desktop Effects in System Settings
2. Click the icon to preview video

OBSERVED RESULT
Blank space where video should exist

EXPECTED RESULT
Video

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.22.3
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Graphics Platform: Wayland
Graphics Processor: NVIDIA GeForce RTX 3060 Ti
Nvidia Driver Version: 470.57.02 from https://launchpad.net/~graphics-drivers/+archive/ubuntu/ppa
Comment 1 kingofgamesyami 2021-07-25 03:22:32 UTC
Created attachment 140312 [details]
stdout of systemsettings5 while reproducing bug
Comment 2 kingofgamesyami 2021-07-28 01:31:37 UTC
Reproduced in 5.22.4
Comment 3 David Edmundson 2021-07-28 20:51:16 UTC
>Error: "No URI handler implemented for \"https\" from gstreamer

This is a setup issue.
Please install relevant backends.
Comment 4 Gleb Popov 2023-02-03 10:50:05 UTC
Bumped into this on FreeBSD. Fixed it there, for reference for fellow packagers:

The needed plugins are:
- gstreamer-plugins-curl for fetching the video data via HTTPS.
- gstreamer-plugins-openh264 to actually play it.
Comment 5 Dashon 2024-08-30 15:10:09 UTC
Wanted to reopen this as an issue on Arch. None of the video demonstrations for the desktop effects seem to load. I believe I have all the necessary dependencies, but so far nothing.
Comment 6 Thiago Sueto 2024-09-02 21:08:49 UTC
So, from what I understand, this is ultimately a downstream issue: if a package is missing that prevents the video from running, the video just doesn't show up / loads endlessly. Particularly problematic for example if you use only flatpaks for videos and don't actually have codecs installed system wide.

Perhaps we could have a cleaner solution by showing a message after a given timeout?

Like: after 15 seconds, if the video is not loaded, show a Label saying "The preview took too long to run. [ ? ]", with the [ ? ] being a ContextualHelpButton saying something like "Your system might be missing essential packages needed to show this preview. Please check with your distribution."

Then we'd have the necessary software mentioned in https://community.kde.org/Distributions/Packaging_Recommendations, and point distros to that to fix things for their users.
Comment 7 Dashon 2024-09-02 21:57:31 UTC
(In reply to Thiago Sueto from comment #6)
> So, from what I understand, this is ultimately a downstream issue: if a
> package is missing that prevents the video from running, the video just
> doesn't show up / loads endlessly. Particularly problematic for example if
> you use only flatpaks for videos and don't actually have codecs installed
> system wide.
> 
> Perhaps we could have a cleaner solution by showing a message after a given
> timeout?
> 
> Like: after 15 seconds, if the video is not loaded, show a Label saying "The
> preview took too long to run. [ ? ]", with the [ ? ] being a
> ContextualHelpButton saying something like "Your system might be missing
> essential packages needed to show this preview. Please check with your
> distribution."
> 
> Then we'd have the necessary software mentioned in
> https://community.kde.org/Distributions/Packaging_Recommendations, and point
> distros to that to fix things for their users.

Makes sense, it would certainly help and prevent this issue from cropping up due to user / distro error.
Comment 8 Ilya Bizyaev 2024-12-14 12:21:15 UTC
Same here, although the reasons could be different. None of the effect preview videos play, and I get this output on the command line for the first video I click:

[ogg @ 0x7f2fc4001600] Broken file, keyframe not correctly marked.

System info:
===
Operating System: openSUSE Tumbleweed 20241211
KDE Plasma Version: 6.2.4
KDE Frameworks Version: 6.8.0
Qt Version: 6.8.1
Kernel Version: 6.11.8-1-default (64-bit)
Graphics Platform: Wayland
Graphics Processor: NVIDIA GeForce RTX 4070/PCIe/SSE2
Comment 9 Dashon 2025-02-03 03:29:20 UTC
Having this problem in arch as well, but I also briefly tested kde neon because the last time I was not able to reproduce it there. However, now it is also broken in kde neon as well. At least it was in the live environment.
Comment 10 skierpage 2025-02-17 01:41:18 UTC
Late 2024 and 2025 comments on this bug may be duplicates of bug 470826. I have this problem too on Fedora 41 KDE spin. I commented on that bug. On my system QtMultimedia defaults to using the ffmpeg backend, not gstreamer, and FWIW both
  % gst-launch-1.0 playbin uri=https://files.kde.org/plasma/kwin/effect-videos/invert.mp4
and
  % ffplay https://files.kde.org/plasma/kwin/effect-videos/fade_desktop.ogv
work fine.
Comment 11 David Edmundson 2025-02-17 13:49:54 UTC
*** Bug 470826 has been marked as a duplicate of this bug. ***
Comment 12 Christophe Marin 2025-03-15 11:47:46 UTC
We received another openSUSE report about this yesterday (https://bugzilla.suse.com/show_bug.cgi?id=1239569)

Testing with `QT_FFMPEG_DEBUG=1 kcmshell6 kcm_kwin_effects` shows curious things. All files.kde.org mirrors are tested but the preview never plays.

A similar thing can be observed with the qtmultimedia examples apps (tested with `QT_FFMPEG_DEBUG=1 /usr/lib64/qt6/examples/multimedia/player https://files.kde.org/plasma/kwin/effect-videos/snap_helper.mp4`) but the video is played
Comment 13 Oliver Beard 2025-04-25 21:04:44 UTC
Git commit a6f6aa19cd1c817fe678b84d83a54f78375fb940 by Oliver Beard.
Committed on 25/04/2025 at 20:48.
Pushed by olib into branch 'master'.

src/kcms,plugins: Remove effects videos
These generally no longer work, and whilst they could be made to work again, they would still be out of date.

If the videos were updated, they would quickly become outdated again as Plasma is updated via wallpaper, theme and other changes.

Effects are previewed easily enough anyway by enabling them and using them in practice.
Related: bug 462932, bug 475633, bug 421884, bug 440398
FIXED-IN: 6.4.0

M  +0    -1    CMakeLists.txt
M  +0    -6    src/kcms/common/effectsmodel.cpp
M  +0    -5    src/kcms/common/effectsmodel.h
M  +0    -28   src/kcms/effects/ui/Effect.qml
D  +0    -43   src/kcms/effects/ui/Video.qml
M  +1    -4    src/plugins/diminactive/metadata.json
M  +0    -1    src/plugins/dimscreen/package/metadata.json
M  +0    -1    src/plugins/fadedesktop/package/metadata.json
M  +1    -4    src/plugins/invert/metadata.json
M  +1    -2    src/plugins/magiclamp/metadata.json
M  +1    -2    src/plugins/magnifier/metadata.json
M  +0    -1    src/plugins/maximize/package/metadata.json
M  +1    -4    src/plugins/mouseclick/metadata.json
M  +1    -4    src/plugins/overview/metadata.json
M  +1    -2    src/plugins/slide/metadata.json
M  +0    -3    src/plugins/slidingpopups/metadata.json
M  +0    -3    src/plugins/snaphelper/metadata.json
M  +0    -1    src/plugins/squash/package/metadata.json
M  +1    -4    src/plugins/trackmouse/metadata.json
M  +1    -4    src/plugins/wobblywindows/metadata.json
M  +1    -2    src/plugins/zoom/metadata.json

https://invent.kde.org/plasma/kwin/-/commit/a6f6aa19cd1c817fe678b84d83a54f78375fb940