src/kcms,plugins: Remove effects videos These generally no longer work, and whilst they could be made to work again, they would still be out of date.

If the videos were updated, they would quickly become outdated again as Plasma is updated via wallpaper, theme and other changes.

Effects are previewed easily enough anyway by enabling them and using them in practice.

BUG: 440244
BUG: 462932
BUG: 475633
BUG: 421884
BUG: 440398
FIXED-IN: 6.4.0